--- a/presentation/index.html
+++ b/presentation/index.html
@@ -67,6 +67,9 @@
         a {
             font-size: 18pt;
         }
+        
+        h3 {
+        }
     </style>
 
 </head>
@@ -95,7 +98,7 @@
             <ul>
                 <li>Miles Pomeroy<br />@nonsensequel</li>
                 <li>Chad Maughan<br/>@chadmaughan</li>
-                <li>Jonathan Geddes</li>
+                <li>Jonathan Geddes<br/>@jonathangeddes</li>
             </ul>
         </q>
     </div>
