--- a/presentation/index.html
+++ b/presentation/index.html
@@ -109,8 +109,8 @@
     <!-- COUCHDB - Miles -->
     <l id="couchdb" class="lang"></l>
 
-    <!-- CASSANDRA - Jon -->
-    <l id="cassandra" class="lang"></l>
+    <!-- MARKLOGIC - Jon -->
+    <l id="marklogic" class="lang"></l>
 
     <!-- RIAK - Chad -->
     <l id="riak" class="lang"></l>
