--- a/presentation/index.html
+++ b/presentation/index.html
@@ -88,7 +88,13 @@
         blockquote:first-letter {
           font-size: 400%;
         }
-        
+
+        code {
+            font-family: courier;
+            font-size: 30pt;
+            display: block;
+            white-space: pre-line;
+        }
     </style>
 
 </head>
