Remove localhost image restriction

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -189,12 +189,12 @@
                 });
                 
                 // if not localhost than hide images by displaying alt text
-                if (window.location.hostname != 'localhost') {
-                  $('img').each(function(i) {
-                    var altText = $(this).attr('alt');
-                    $(this).parent().html(altText);
-                  });
-                }
+                //if (window.location.hostname != 'localhost') {
+                //  $('img').each(function(i) {
+                //    var altText = $(this).attr('alt');
+                //    $(this).parent().html(altText);
+                //  });
+                //}
             });
         });
         
